# project-euler

./: .clang-format  CMakeLists.txt  README.md  ex1.c  ex10.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  format.sh
src/: pe.c
src/lib/: eratosthenes.h
src/problems/1-9/: ex1.h  ex2.h  ex3.h  ex4.c  ex4.h  ex5.c  ex5.h  ex6.h  ex7.h  ex8.h  ex9.h  exercises.h
src/problems/10-19/: ex10.h  ex11.c  ex11.h  ex12.h  ex13.c  ex13.h  ex14.c  ex14.h  ex15.h  ex16.h  ex17.c  ex17.h  exercises.h
