cmake_minimum_required(VERSION 3.25)
project(project_euler C)

set(CMAKE_C_STANDARD 23)

add_executable(1 ex1.c)
add_executable(2 ex2.c)
add_executable(3 ex3.c)
add_executable(4 ex4.c)
add_executable(5 ex5.c)
add_executable(6 ex6.c)
add_executable(7 ex7.c)
add_executable(8 ex8.c)
add_executable(9 ex9.c)
add_executable(10 ex10.c)
